<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_top_stories"
            android:icon="@drawable/ic_top_stories_black_24dp"
            android:title="@string/top_stories" />
        <item
            android:id="@+id/nav_most_popular"
            android:icon="@drawable/ic_most_popular_black_24dp"
            android:title="@string/most_popular" />
        <item
            android:id="@+id/nav_arts"
            android:icon="@drawable/ic_format_paint_black_24dp"
            android:title="@string/art_and_design" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search" />


    <item android:title="@string/settings">

        <menu>
            <item
                android:id="@+id/nav_notifications"
                android:icon="@drawable/ic_notifications_black_24dp"
                android:title="@string/notifications" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/help" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/about" />
        </menu>

    </item>

    </group>

</menu>
